--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -11,10 +11,14 @@
     <string name="conversations_title">Conversations</string>
     <string name="conversation_title">Conversation</string>
     <string name="login_error">Invalid username or password</string>
+    <string name="register_api_error">Missing required fields</string>
+    <string name="register_error">Passwords do not match!</string>
     <string name="logout">Logout</string>
     <string name="network_error">Ooops, something went wrong</string>
     <string name="send">Send</string>
     <string name="send_message_hint">Type a message...</string>
     <string name="login_loading">Logging in...</string>
     <string name="not_implemented_yet">Not implemented yet!</string>
+    <string name="register_title">Register</string>
+    <string name="url">Image url</string>
 </resources>
