--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="not_implemented_yet">Not implemented yet!</string>
     <string name="register_title">Register</string>
     <string name="url">Image url</string>
+    <string name="registering">Registering...</string>
 </resources>
